# devx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bors.toml  crates.js  deny.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
devx-cmd/: Cargo.toml  README.md
devx-cmd/src/: error.rs  lib.rs
devx-pre-commit/: Cargo.toml  README.md
devx-pre-commit/src/: lib.rs
devx_cmd/: all.html  enum.Ostream.html  index.html  macro.cmd!.html  macro.cmd.html  macro.read!.html  macro.read.html  macro.read_bytes!.html  macro.read_bytes.html  macro.run!.html  macro.run.html  sidebar-items.js  struct.Child.html  struct.Cmd.html  struct.Error.html  type.Result.html
devx_cmd/error/: struct.Error.html  type.Result.html
devx_pre_commit/: all.html  fn.install_self_as_hook.html  fn.locate_project_root.html  index.html  sidebar-items.js  struct.PreCommitContext.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
scripts/: git-retry-install.sh
src/devx_cmd/: error.rs.html  lib.rs.html
src/devx_pre_commit/: lib.rs.html
src/xtask/: lib.rs.html  pre_commit.rs.html
xtask/: Cargo.toml  all.html  index.html  sidebar-items.js
xtask/pre_commit/: fn.install_hook.html  fn.run_hook.html  index.html  sidebar-items.js
xtask/src/: lib.rs  main.rs  pre_commit.rs
