[package]
name = "devx-pre-commit"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Vitalii Kryvenko <vkryvenko@elastio.com>"]
homepage = "https://github.com/elastio/devx"
repository = "https://github.com/elastio/devx"
keywords = ["git", "pre-commit", "hook", "rustfmt", "formatter"]
categories = ["development-tools"]
readme = "README.md"
description = """
    Utilities for creating git pre-commit hooks useful in rust projects
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devx-cmd = { version = "0.3.0", path = "../devx-cmd" }
anyhow = "1.0"
fs-err = "2.3"
